--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: "Code & Analyze: Arpita's Dev Blog"
+description: "Daily logs of my learning journey in Software Development and Data Analysis."
+author: Arpita Singh
+email: arpitasi3332@gmail.com
+theme: minima
